--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,23 +7,19 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="hackillinois.com.thoughts.MainActivity"
-    tools:showIn="@layout/main_activity">
+    tools:context="hackillinois.com.thoughts.MainActivity">
+    <Button
+        android:id="@+id/btnMind"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Probe Thoughts..."
+        />
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/imageView"
-        android:layout_centerVertical="true" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Thoughts"
-        android:id="@+id/textView"
-        android:layout_above="@+id/imageView"
-        android:layout_centerHorizontal="true"
-        android:visibility="visible" />
+        android:layout_centerVertical="true"
+        android:layout_alignEnd="@+id/btnMind" />
 
 </RelativeLayout>
