--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,6 +23,7 @@
             android:layout_width="122dp"
             android:layout_height="130dp"
             android:paddingBottom="30dp"
+            android:paddingTop="30dp"
             android:maxHeight="130dp"
             android:maxWidth="122dp" />
 
@@ -60,13 +61,6 @@
         </RelativeLayout>
 
     </LinearLayout>
-
-    <Button
-        android:id="@+id/btnSearch"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/search"
-        />
 
     <ListView
         android:id="@+id/list"
