--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -15,7 +15,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/imageView"
-        android:layout_centerVertical="true" />
+        android:layout_centerVertical="true"
+        android:background="@android:color/transparent"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -25,6 +26,6 @@
         android:id="@+id/textView"
         android:layout_above="@+id/imageView"
         android:layout_centerHorizontal="true"
-        android:visibility="visible" />
+        android:visibility="invisible" />
 
 </RelativeLayout>
